cabal-version:      3.0
name:               github-annotations-test
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/github-annotations-test#readme>

homepage:           https://github.com/SimSpace/github-annotations-test#readme
bug-reports:        https://github.com/SimSpace/github-annotations-test/issues
author:             Devin Lehmacher
maintainer:         n/a
copyright:          2021 SimSpace Corporation
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/SimSpace/github-annotations-test

common options
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010

common executable-options
  import:      options
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:          options
  exposed-modules: Lib
  other-modules:   Paths_github_annotations_test
  hs-source-dirs:  src

test-suite github-annotations-test-test
  import:         executable-options
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:  Paths_github_annotations_test
  hs-source-dirs: test
  build-depends:  github-annotations-test
