cabal-version:      3.0
name:               plugin
version:            0.1.0.0
description:
  Please see the README on GitHub at <https://github.com/githubuser/github-annotations-test#readme>

homepage:           https://github.com/SimSpace/github-annotations-test#readme
bug-reports:        https://github.com/SimSpace/github-annotations-test/issues
author:             Devin Lehmacher
maintainer:         n/a
copyright:          2021 SimSpace Corporation
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/SimSpace/github-annotations-test

common options
  build-depends:
    , base        >=4.7    && <5
    , containers
    , ghc         ==8.10.7
    , text

  default-language: Haskell2010

common executable-options
  import:      options
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:          options
  exposed-modules: Plugin
  other-modules:   Paths_plugin
  hs-source-dirs:  src
